[plugin-link] fix: anchor on small (nom-mobile) screens (#1414)

--- a/packages/editor-common/web/statics/styles/multi-select-link-panel.scss
+++ b/packages/editor-common/web/statics/styles/multi-select-link-panel.scss
@@ -13,15 +13,41 @@
   font-stretch: normal;
   font-style: normal;
 }
+.multiSelectLinkPanel_container_mobile {
+  font-family: HelveticaNeue;
+  color: black;
+  font-size: 14px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  min-width: 0;
+  width: auto;
+  height: auto;
+  margin: 0;
+}
 
 .multiSelectLinkPanel_content {
   display: flex;
   height: 279px;
 }
+.multiSelectLinkPanel_content_mobile {
+  display: flex;
+  padding: 0 18px;
+  height: calc(100% - 217px);
+}
 
 .multiSelectLinkPanel_LinkPanelContainer {
   width: 100%;
   margin: 14px 0 0 20px;
+}
+.multiSelectLinkPanel_LinkPanelContainer_mobile {
+  width: 100%;
+  margin: 8px 0 0 0;
 }
 
 .multiSelectLinkPanel_actionsDivider {
@@ -35,6 +61,13 @@
   padding: 12px 23px 14px;
   &.multiSelectLinkPanel_Footer {
     padding: 12px 0 16px 0;
+  }
+  &.linkPanel_Footer_mobile {
+    padding: 12px 18px 14px;
+    &.multiSelectLinkPanel_Footer {
+      background-color: #0060ff;
+      padding: 10px 10px;
+    }
   }
 }
 
@@ -51,6 +84,11 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  &.linkPanel_FooterButton_mobile {
+    &.multiSelectLinkPanel_Button {
+      color: #ffffff;
+    }
+  }
 }
 
 .linkPanel_VerticalDivider {
@@ -59,6 +97,12 @@
   border-right: 1px solid rgba(51, 51, 51, 0.1);
   &.linkPanel_VerticalDividerNarrowMargin{
     margin: 0 13px;
+  }
+  &.linkPanel_VerticalDivider_mobile{
+    margin: 0 20px;
+    &.multiSelectLinkPanel_VerticalDivider {
+      border-right: 1px solid white;
+    }
   }
 }
 
@@ -76,6 +120,16 @@
   line-height: 1.5;
   margin-top: 2px;
   margin-bottom: 16px;
+}
+.multiSelectLinkPanel_header_mobile {
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 28px;
+  margin-bottom: 24px;
+  text-align: center;
 }
 
 .multiSelectLinkPanel_mobileHeaderIcon { 
@@ -104,90 +158,25 @@
   }
 }
 
-.linkPanelDropdown_dropdownArrowIcon{
-  position: absolute;
-  top: 12px;
-  right: 12px;
-} 
-
-@media only screen and (max-width: 640px) {
-  .multiSelectLinkPanel_container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    min-width: 0;
-    width: auto;
-    height: auto;
-    margin: 0;
+.multiSelectLinkPanel_tabsWrapper{
+  display: flex;
+  border-bottom: 1px solid gainsboro;
+  margin-bottom: 12px;
+  
+  .multiSelectLinkPanel_tab{
+    display: flex;
+    height: 30px;
+    padding-bottom: 8px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    &:hover{
+      cursor: pointer;
+    }
   }
   
-  .linkPanel_Footer {
-    padding: 12px 18px 14px;
-    &.multiSelectLinkPanel_Footer {
-      background-color: #0060ff;
-      padding: 10px 10px;
-    }
-  }
-
-  .linkPanel_FooterButton {
-    &.multiSelectLinkPanel_Button {
-      color: #ffffff;
-    }
-  }
-
-  .linkPanel_VerticalDivider{
-    margin: 0 20px;
-    &.multiSelectLinkPanel_VerticalDivider {
-      border-right: 1px solid white;
-    }
-  }
-
-  .multiSelectLinkPanel_header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 28px;
-    margin-bottom: 24px;
-    text-align: center;
-  }
-
-  .multiSelectLinkPanel_tabsWrapper{
-    display: flex;
-    border-bottom: 1px solid gainsboro;
-    margin-bottom: 12px;
-    
-    .multiSelectLinkPanel_tab{
-      display: flex;
-      height: 30px;
-      padding-bottom: 8px;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-      &:hover{
-        cursor: pointer;
-      }
-    }
-    
-    .multiSelectLinkPanel_tabSelected{
-      border-bottom: 2px solid #0261ff;
-      color: #0261ff;
-    }
-    
-    .linkPanelDropdown_dropdownArrowIcon{
-      position: absolute;
-      top: 12px;
-      right: 12px;
-    }
-  }
-
-  .multiSelectLinkPanel_content {
-    padding: 0 18px;
-    height: calc(100% - 217px);
-  }
-
-  .multiSelectLinkPanel_LinkPanelContainer {
-    margin: 8px 0 0 0;
+  .multiSelectLinkPanel_tabSelected{
+    border-bottom: 2px solid #0261ff;
+    color: #0261ff;
   }
 }
